fixed more breakpoints for responsive view on tablets & iphones, overrided bootstrap default margins causing issues with the button spacing

--- a/style.css
+++ b/style.css
@@ -248,6 +248,7 @@ footer {
 @media (min-width: 300px) {
   .btn {
       margin-left: 14px!important;
+      margin-top: 10px!important;
     }
 }
 
@@ -273,10 +274,9 @@ footer {
 
 
 @media (min-width: 768px) {
-  .btn {
-    width: 150px;
+.btn {
+    width: 215px!important;
   }
-
 }
 
 @media (min-width: 992px) {
